[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ohdsi-hekate"
dynamic = ["version"]
description = "A pipeline to ingest source drug data into OMOP CDM"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["omop-cdm", "ohdsi", "medical-data"]
authors = [
  { name = "Eduard Korchmar", email = "korchmar@ohdsi.org" },
]
maintainers = [
  { name = "Eduard Korchmar", email = "korchmar@ohdsi.org" },
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Production/Stable",

  "Topic :: Scientific/Engineering",

  "Typing :: Typed",

  "Programming Language :: Cython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "polars",
  "rustworkx",
]

[project.optional-dependencies]
database = ["sqlalchemy", "pandas"]


[project.urls]
"Homepage" = "https://github.com/OHDSI/Vocabulary-v5.0/wiki/International-Drug-Vocabulary-Implementation-Process"
"Bug Reports" = "https://github.com/OHDSI/hekate/issues"
"Source" = "https://github.com/OHDSI/hekate"

[tool.setuptools.packages.find]
where = ["src/hekate"]

[tool.setuptools.dynamic]
version = {file = "src/hekate/__version__"}

[tool.pyright]
include = ["src"]

reportImplicitStringConcatenation = false  # Intentionally using it
reportUninitializedInstanceVariable = false  # Pyright doesn't understand dataclasses
reportImplicitRelativeImport = false  # Importing in python is a headache

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.sqlfluff.core]
dialect = "postgres"
